# Vitis_Libraries_2020.1

database/L2/demos/: makefile
database/L2/demos/host/: columngen_tpcds.cpp  copy.sh  gqe_api.hpp  tpcds_read.hpp  tpch_read_2.hpp  utils.hpp
database/L2/demos/host/q01/cpu/: q1.hpp
database/L2/demos/host/q01/sf1_fpga/: q1.hpp
database/L2/demos/host/q01/sf1_sfsql2fpga_fpga/: cfgFunc_q1.hpp  q1.hpp  test_q1.cpp
database/L2/demos/host/q01/sf1_sql2fpga_fpga/: q1.hpp  test_q1.cpp
database/L2/demos/host/q01/sfsql2fpga_fpga/: cfgFunc_q1.hpp  q1.hpp  test_q1.cpp
database/L2/demos/host/q02/sf1_sfsql2fpga_fpga/: cfgFunc_q2.hpp  q2.hpp  test_q2.cpp
database/L2/demos/host/q02/sf1_sql2fpga_fpga/: q2.hpp  test_q2.cpp
database/L2/demos/host/q02/sfsql2fpga_fpga/: cfgFunc_q2.hpp  q2.hpp  test_q2.cpp
database/L2/demos/host/q03/cpu/: q3.hpp
database/L2/demos/host/q03/sf1_sfsql2fpga_fpga/: cfgFunc_q3.hpp  q3.hpp  test_q3.cpp
database/L2/demos/host/q03/sf1_sql2fpga_fpga/: q3.hpp  test_q3.cpp
database/L2/demos/host/q03/sfsql2fpga_fpga/: cfgFunc_q3.hpp  q3.hpp  test_q3.cpp
database/L2/demos/host/q04/sf1_sfsql2fpga_fpga/: cfgFunc_q4.hpp  q4.hpp  test_q4.cpp
database/L2/demos/host/q04/sf1_sql2fpga_fpga/: q4.hpp  test_q4.cpp
database/L2/demos/host/q04/sfsql2fpga_fpga/: cfgFunc_q4.hpp  q4.hpp  test_q4.cpp
database/L2/demos/host/q05/cpu/: q5.hpp
database/L2/demos/host/q05/sf1_sfsql2fpga_fpga/: cfgFunc_q5.hpp  q5.hpp  test_q5.cpp
database/L2/demos/host/q05/sf1_sql2fpga_fpga/: q5.hpp  test_q5.cpp
database/L2/demos/host/test/: CMakeLists.txt  arrow_conversion.cpp
(+348 files in other folders)
